# javs

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  plan.md  pyproject.toml  report.md  test_impersonate.py  test_sub.py
.agent/rules/: javs-workspace.md
docs/: PLAYBOOK.md  USAGE.md  commands.md  configuration.md  contributor-guide.md  getting-started.md  troubleshooting.md
docs/superpowers/plans/: 2026-03-23-proxy-hardening.md  2026-03-24-translate-pipeline-hardening.md  2026-03-25-find-inspector-provenance.md  2026-03-27-find-layout-refresh.md  2026-04-03-documentation-restructure.md  2026-04-08-platform-foundation.md  2026-04-10-history-realtime-foundation.md
docs/superpowers/specs/: 2026-03-24-translate-scope-design.md  2026-03-25-find-inspector-provenance-design.md  2026-03-27-find-layout-refresh-design.md  2026-04-03-documentation-restructure-design.md  2026-04-08-platform-foundation-design.md  2026-04-10-history-realtime-foundation-design.md
javs/: __init__.py  __main__.py  cli.py
javs/api/: __init__.py  app.py
javs/api/routes/: __init__.py  jobs.py  realtime.py  settings.py
javs/application/: __init__.py  facade.py  find.py  history.py  models.py  settings.py  sort_jobs.py  update_jobs.py
javs/config/: __init__.py  csv_templates.py  deprecated.py  loader.py  migrations.py  models.py  updater.py
javs/core/: __init__.py  aggregator.py  engine.py  nfo.py  organizer.py  runtime.py  scanner.py
javs/data/: default_config.yaml  genres.csv  thumbs.csv
javs/database/: __init__.py  connection.py  migrations.py  schema.py
javs/database/repositories/: __init__.py  events.py  job_items.py  jobs.py  settings_audit.py
javs/jobs/: __init__.py  events.py  executor.py  runner.py
javs/models/: __init__.py  file.py  movie.py
javs/scrapers/: __init__.py  aventertainment.py  base.py  dlgetchu.py  dmm.py  jav321.py  javbus.py  javdb.py  javlibrary.py  mgstage.py  r18dev.py  registry.py  tokyohot.py
javs/services/: emby.py  http.py  image.py  javlibrary_auth.py  proxy_diagnostics.py  translator.py
javs/utils/: html.py  logging.py  string.py
scripts/: benchmark_real_scrape.py  benchmark_sort_batch.py  create_dummy_files.sh  impersonate_test.py  real_scrape_test.py  verify_local.sh
tests/: conftest.py  test_aggregator.py  test_api_platform.py  test_application_platform.py  test_benchmark_real_scrape.py  test_cli.py  test_config.py  test_config_sync.py  test_database_platform.py  test_emby.py  test_engine.py  test_image.py  test_javlibrary_auth.py  test_nfo.py  test_organizer.py  test_proxy.py  test_scanner.py  test_translator.py  test_verify_local.py
tests/data/mgstage/: detail_ABF-329.html  search_ABF-329.html  (+1 more)
tests/scrapers/: test_base.py  test_dmm.py  test_javlibrary.py  test_mgstage.py  test_r18dev.py  test_registry.py
(+9 files in other folders)
