[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "javs"
version = "1.0.0"
description = "A powerful CLI tool to scrape, organize, and manage JAV media libraries"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "LHViet245", email = "lviet96@gmail.com" }]
keywords = ["jav", "scraper", "metadata", "cli", "async", "media-manager"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]

[project.urls]
Homepage = "https://github.com/LHViet245/javs"
Repository = "https://github.com/LHViet245/javs"

dependencies = [
    "typer[all]>=0.9",
    "pydantic>=2.0",
    "aiohttp>=3.9",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "Pillow>=10.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "tenacity>=8.0",
    "structlog>=23.0",
    "aiofiles>=23.0",
    "curl_cffi>=0.7",
    "aiohttp-socks>=0.8",
    "ruamel.yaml>=0.18",
]

[project.optional-dependencies]
translate = ["googletrans>=4.0.2", "deepl>=1.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "aioresponses>=0.7",
]

[project.scripts]
javs = "javs.cli:app"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/scrapers/test_javlibrary.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
